// This file is auto-generated by @hey-api/openapi-ts

export type ClientOptions = {
    baseUrl: 'http://localhost:8080' | (string & {});
};

export type LoginRequestDto = {
    username: string;
    password: string;
};

export type LoginResponseDto = {
    bearerToken: string;
};

export type AddressDto = {
    id: number;
    street: string;
    number: string;
    postalCode: string;
    city: string;
    country: string;
};

export type UserxUpdateDto = {
    id?: number;
    username: string;
    password?: string;
    firstName?: string;
    lastName?: string;
    email?: string;
    phone?: string;
    enabled?: boolean;
    shippingAddress?: AddressDto;
    paymentAddress?: AddressDto;
    role: RoleEnum;
};

export type UserxDto = {
    id?: number;
    createdBy?: number;
    createDate?: string;
    updatedBy?: number;
    updateDate?: string;
    username: string;
    firstName: string;
    lastName: string;
    email?: string;
    phone?: string;
    shippingAddress?: AddressDto;
    paymentAddress?: AddressDto;
    enabled: boolean;
    role: RoleEnum;
};

export type ProductDto = {
    id: number;
    name: string;
    price: number;
    stock: number;
    discount: number;
    shortDescription?: string;
    description?: string;
    rating?: number;
    imageUrl?: string;
    createdDate?: string;
    updatedDate?: string;
};

export type ReviewDto = {
    id?: number;
    product?: ProductDto;
    author?: UserxDto;
    rating?: number;
    title: string;
    comment: string;
    createdDate?: string;
};

export type OrderDto = {
    id?: number;
    userId?: number;
    status?: StatusEnum;
    shippingAddress?: AddressDto;
    paymentAddress?: AddressDto;
    sum?: number;
    products?: {
        [key: string]: number;
    };
    createdDate?: string;
};

export type OrderResponseDto = {
    failed: boolean;
    orderId?: number;
    order?: OrderDto;
    productsInStock?: {
        [key: string]: number;
    };
};

export type CartItemDto = {
    id?: number;
    product: ProductDto;
    user: UserxDto;
    quantity?: number;
};

export type Sort = {
    sort?: Array<string>;
};

export type PageableListDtoReviewDto = {
    pageSize?: number;
    pageIdAfter?: number;
    pageCount?: number;
    totalCount: number;
    items?: Array<ReviewDto>;
};

export type ProductFilterDto = {
    name?: string;
    minRating?: number;
    minPrice?: number;
    maxPrice?: number;
    minStock?: number;
};

export type PageableListDtoProductDto = {
    pageSize?: number;
    pageIdAfter?: number;
    pageCount?: number;
    totalCount: number;
    items?: Array<ProductDto>;
};

export type PageableListDtoOrderDto = {
    pageSize?: number;
    pageIdAfter?: number;
    pageCount?: number;
    totalCount: number;
    items?: Array<OrderDto>;
};

export enum RoleEnum {
    ADMIN = 'ADMIN',
    MANAGER = 'MANAGER',
    CUSTOMER = 'CUSTOMER'
}

export enum StatusEnum {
    PENDING = 'PENDING',
    PENDING_PAYMENT = 'PENDING_PAYMENT',
    PROCESSING = 'PROCESSING',
    SHIPPED = 'SHIPPED',
    DELIVERED = 'DELIVERED',
    CANCELLED = 'CANCELLED'
}

export type AuthenticateUserData = {
    body: LoginRequestDto;
    path?: never;
    query?: never;
    url: '/authentication/login';
};

export type AuthenticateUserResponses = {
    /**
     * OK
     */
    200: LoginResponseDto;
};

export type AuthenticateUserResponse = AuthenticateUserResponses[keyof AuthenticateUserResponses];

export type GetCurrentUserData = {
    body?: never;
    path?: never;
    query?: never;
    url: '/api/users/me';
};

export type GetCurrentUserResponses = {
    /**
     * OK
     */
    200: UserxDto;
};

export type GetCurrentUserResponse = GetCurrentUserResponses[keyof GetCurrentUserResponses];

export type UpdateCurrentUserData = {
    body?: never;
    path?: never;
    query?: never;
    url: '/api/users/me';
};

export type UpdateCurrentUserResponses = {
    /**
     * OK
     */
    200: UserxDto;
};

export type UpdateCurrentUserResponse = UpdateCurrentUserResponses[keyof UpdateCurrentUserResponses];

export type CreateCurrentUserData = {
    body: UserxUpdateDto;
    path?: never;
    query?: never;
    url: '/api/users/me';
};

export type CreateCurrentUserResponses = {
    /**
     * OK
     */
    200: UserxDto;
};

export type CreateCurrentUserResponse = CreateCurrentUserResponses[keyof CreateCurrentUserResponses];

export type UpdateSubscriptionData = {
    body?: never;
    path: {
        id: number;
    };
    query?: {
        inStock?: boolean;
        discount?: boolean;
    };
    url: '/api/product/{id}/subscribe';
};

export type UpdateSubscriptionResponses = {
    /**
     * OK
     */
    200: string;
};

export type UpdateSubscriptionResponse = UpdateSubscriptionResponses[keyof UpdateSubscriptionResponses];

export type SubscribeData = {
    body?: never;
    path: {
        id: number;
    };
    query?: {
        inStock?: boolean;
        discount?: boolean;
    };
    url: '/api/product/{id}/subscribe';
};

export type SubscribeResponses = {
    /**
     * OK
     */
    200: string;
};

export type SubscribeResponse = SubscribeResponses[keyof SubscribeResponses];

export type CreateReviewData = {
    body: ReviewDto;
    path: {
        id: number;
    };
    query?: never;
    url: '/api/product/{id}/createReview';
};

export type CreateReviewResponses = {
    /**
     * OK
     */
    200: ProductDto;
};

export type CreateReviewResponse = CreateReviewResponses[keyof CreateReviewResponses];

export type CreateOrderData = {
    body?: never;
    path?: never;
    query?: never;
    url: '/api/orders/createOrder';
};

export type CreateOrderResponses = {
    /**
     * OK
     */
    200: OrderResponseDto;
};

export type CreateOrderResponse = CreateOrderResponses[keyof CreateOrderResponses];

export type ConfirmOrderData = {
    body: OrderDto;
    path?: never;
    query?: never;
    url: '/api/orders/confirmOrder';
};

export type ConfirmOrderResponses = {
    /**
     * OK
     */
    200: OrderDto;
};

export type ConfirmOrderResponse = ConfirmOrderResponses[keyof ConfirmOrderResponses];

export type CancelOrderData = {
    body: OrderDto;
    path?: never;
    query?: never;
    url: '/api/orders/cancelOrder';
};

export type CancelOrderResponses = {
    /**
     * OK
     */
    200: OrderDto;
};

export type CancelOrderResponse = CancelOrderResponses[keyof CancelOrderResponses];

export type CreateProductData = {
    body: ProductDto;
    path?: never;
    query?: never;
    url: '/api/manager/createProduct';
};

export type CreateProductResponses = {
    /**
     * OK
     */
    200: ProductDto;
};

export type CreateProductResponse = CreateProductResponses[keyof CreateProductResponses];

export type ClearShoppingCartData = {
    body?: never;
    path?: never;
    query?: never;
    url: '/api/cart';
};

export type ClearShoppingCartResponses = {
    /**
     * OK
     */
    200: unknown;
};

export type GetShoppingCartData = {
    body?: never;
    path?: never;
    query?: never;
    url: '/api/cart';
};

export type GetShoppingCartResponses = {
    /**
     * OK
     */
    200: Array<CartItemDto>;
};

export type GetShoppingCartResponse = GetShoppingCartResponses[keyof GetShoppingCartResponses];

export type AddAllToShoppingCartData = {
    body: {
        [key: string]: number;
    };
    path?: never;
    query?: never;
    url: '/api/cart';
};

export type AddAllToShoppingCartResponses = {
    /**
     * OK
     */
    200: unknown;
};

export type DeleteProductFromShoppingCartData = {
    body?: never;
    path: {
        productId: number;
    };
    query?: never;
    url: '/api/cart/{productId}';
};

export type DeleteProductFromShoppingCartResponses = {
    /**
     * OK
     */
    200: unknown;
};

export type UpdateProductInShoppingCartData = {
    body?: never;
    path: {
        productId: number;
    };
    query: {
        quantity: number;
    };
    url: '/api/cart/{productId}';
};

export type UpdateProductInShoppingCartResponses = {
    /**
     * OK
     */
    200: CartItemDto;
};

export type UpdateProductInShoppingCartResponse = UpdateProductInShoppingCartResponses[keyof UpdateProductInShoppingCartResponses];

export type AddProductToShoppingCartData = {
    body?: never;
    path: {
        productId: number;
    };
    query: {
        quantity: number;
    };
    url: '/api/cart/{productId}';
};

export type AddProductToShoppingCartResponses = {
    /**
     * OK
     */
    200: unknown;
};

export type CreateUserData = {
    body: UserxUpdateDto;
    path?: never;
    query?: never;
    url: '/api/admin/createUser';
};

export type CreateUserResponses = {
    /**
     * OK
     */
    200: UserxDto;
};

export type CreateUserResponse = CreateUserResponses[keyof CreateUserResponses];

export type DeleteProductData = {
    body?: never;
    path: {
        id: number;
    };
    query?: never;
    url: '/api/manager/product/{id}';
};

export type DeleteProductResponses = {
    /**
     * OK
     */
    200: unknown;
};

export type UpdateProductData = {
    body?: never;
    path: {
        id: number;
    };
    query: {
        productUpdateDTO: ProductDto;
    };
    url: '/api/manager/product/{id}';
};

export type UpdateProductResponses = {
    /**
     * OK
     */
    200: ProductDto;
};

export type UpdateProductResponse = UpdateProductResponses[keyof UpdateProductResponses];

export type UpdateOrderData = {
    body?: never;
    path: {
        id: number;
    };
    query?: never;
    url: '/api/manager/order/{id}/cancel';
};

export type UpdateOrderResponses = {
    /**
     * OK
     */
    200: unknown;
};

export type DeleteUserData = {
    body?: never;
    path: {
        id: number;
    };
    query?: never;
    url: '/api/admin/user/{id}';
};

export type DeleteUserResponses = {
    /**
     * OK
     */
    200: unknown;
};

export type GetUserData = {
    body?: never;
    path: {
        id: number;
    };
    query?: never;
    url: '/api/admin/user/{id}';
};

export type GetUserResponses = {
    /**
     * OK
     */
    200: UserxDto;
};

export type GetUserResponse = GetUserResponses[keyof GetUserResponses];

export type UpdateUserData = {
    body: UserxUpdateDto;
    path: {
        id: number;
    };
    query?: never;
    url: '/api/admin/user/{id}';
};

export type UpdateUserResponses = {
    /**
     * OK
     */
    200: UserxDto;
};

export type UpdateUserResponse = UpdateUserResponses[keyof UpdateUserResponses];

export type IsAuthenticatedData = {
    body?: never;
    path?: never;
    query?: never;
    url: '/api/users/authenticated';
};

export type IsAuthenticatedResponses = {
    /**
     * OK
     */
    200: string;
};

export type IsAuthenticatedResponse = IsAuthenticatedResponses[keyof IsAuthenticatedResponses];

export type GetProductByIdData = {
    body?: never;
    path: {
        id: number;
    };
    query?: never;
    url: '/api/product/{id}';
};

export type GetProductByIdResponses = {
    /**
     * OK
     */
    200: ProductDto;
};

export type GetProductByIdResponse = GetProductByIdResponses[keyof GetProductByIdResponses];

export type GetReviewsData = {
    body?: never;
    path: {
        id: number;
    };
    query: {
        pageId?: number;
        pageSize?: number;
        sort: Sort;
    };
    url: '/api/product/{id}/reviews';
};

export type GetReviewsResponses = {
    /**
     * OK
     */
    200: PageableListDtoReviewDto;
};

export type GetReviewsResponse = GetReviewsResponses[keyof GetReviewsResponses];

export type GetProductsData = {
    body?: never;
    path?: never;
    query: {
        pageId?: number;
        pageSize?: number;
        sort: Sort;
        filter: ProductFilterDto;
    };
    url: '/api/product/products';
};

export type GetProductsResponses = {
    /**
     * OK
     */
    200: PageableListDtoProductDto;
};

export type GetProductsResponse = GetProductsResponses[keyof GetProductsResponses];

export type GetOrdersData = {
    body?: never;
    path?: never;
    query?: never;
    url: '/api/orders';
};

export type GetOrdersResponses = {
    /**
     * OK
     */
    200: PageableListDtoOrderDto;
};

export type GetOrdersResponse = GetOrdersResponses[keyof GetOrdersResponses];

export type GetAllOrdersData = {
    body?: never;
    path?: never;
    query?: never;
    url: '/api/manager/orders';
};

export type GetAllOrdersResponses = {
    /**
     * OK
     */
    200: PageableListDtoOrderDto;
};

export type GetAllOrdersResponse = GetAllOrdersResponses[keyof GetAllOrdersResponses];

export type GetAllUsersData = {
    body?: never;
    path?: never;
    query?: never;
    url: '/api/admin/users';
};

export type GetAllUsersResponses = {
    /**
     * OK
     */
    200: Array<UserxDto>;
};

export type GetAllUsersResponse = GetAllUsersResponses[keyof GetAllUsersResponses];

export type GetAllManagersData = {
    body?: never;
    path?: never;
    query?: never;
    url: '/api/admin/managers';
};

export type GetAllManagersResponses = {
    /**
     * OK
     */
    200: Array<UserxDto>;
};

export type GetAllManagersResponse = GetAllManagersResponses[keyof GetAllManagersResponses];

export type DeleteReviewData = {
    body?: never;
    path: {
        productId: number;
        reviewId: number;
    };
    query?: never;
    url: '/api/product/{productId}/review/{reviewId}';
};

export type DeleteReviewResponses = {
    /**
     * OK
     */
    200: unknown;
};
